site_static/site/scss/counselling.scss
/* ... */
p {
    font-size: 0.93em;
    line-height: 143%;
    color: $grey-dark;
    margin: 0 0 20px 0;

    .is-md &, .is-sm &, .is-xs & {
        font-size: 0.93em;
        line-height: 143%;
    }
}

h1 {
    font-family: $font-1 $font-family-1;
    font-weight: $font-black;
    font-size: 1.33em;
    color: $black;
    line-height: 180%;
    text-transform: uppercase;

    .is-sm &, .is-xs & {
        font-size: 1.33em;
        line-height: 180%;
    }
}

h2, h3 {
    font-family: $font-1, $font-family-1;
    font-weight: $font-black;
    font-size: 1.6em;
    color: $black;
    letter-spacing: 0.07em;
    line-height: 150%;
    text-transform: uppercase;

    .is-md &, .is-sm & {
        font-size: 1.6em;
        line-height: 150%;
    }

    .is-xs & {
        font-size: 1.4em;
        line-height: 150%;
    }
}

h3 {
    font-weight: $font-semi;
    margin-bottom: 20px;

    .is-xs & {
        margin-bottom: 20px;
    }

    time {
        font-size: 0.75em;
    }
}

h2 + h3 {
    margin-top: -30px;

    .is-xs & {
        margin-top: -25px;
    }
}

h4 {
    font-family: $font-1, $font-family-1;
    font-weight: $font-semi;
    font-size: 1.2em;
    color: $grey-dark;
    line-height: 111%;
    margin-bottom: 20px;

    .is-sm &, .is-xs & {
        font-size: 1.2em;
        line-height: 111%;
    }
}

h5 {
    font-family: $font-1, $font-family-1;
    font-weight: $font-bold;
    font-size: 1em;
    color: $grey-dark;
    line-height: 111%;
    margin-bottom: 15px;

    .is-sm &, .is-xs & {
        font-size: 1em;
        line-height: 111%;
    }
}

p + h2, p + h4, p + h5 {
    margin-top: 50px;
}

.line, hr {
    background: $grey-bright;
    margin: 40px 0 60px;

    .is-sm &, .is-xs & {
        margin: 40px 0 60px;
    }
}

.input-field {
    .select-option {
        &:hover, &.focus {
            background: $brown-light;
        }
    }
}

.fawesome.button.text, .fawesome.btn.text {
    background: $white;
    background: rgba(255, 255, 255, 0.5);
    border: 1px solid $white;
    text-decoration: none;

    &:before {
        background: $orange;
        line-height: 205%;
        width: 2.00em;
        height: 2.00em;
        margin: 0px 6% 0px 0px;
        position: relative;
        top: -2px;
        left: 1px;

        .is-md &, .is-sm & {
            margin-right: 6%;
        }
    }

    &:hover, &:focus {
        background: $white;

        &:before {
            background: $orange-light;
        }
    }

    .is-sm &, .is-md & {
        font-size: 1.2em;
    }

    .is-xs & {
        width: 100%;
        height: 2.2em;
        line-height: 225%;
        border-radius: 1.33em;

        .text {
            display: initial;
            font-size: 0.95em;
        }

        &:before {
            width: 1.9em;
            height: 1.9em;
            font-size: 1.1em;
            line-height: 200%;
            margin: 0px 4% 1px 0px;
            z-index: 1;
            position: relative;
        }

        &:after {
            content: none !important;
        }
    }
}


#header {
    img.logo {
        .is-xs & {
            padding-left: 55px;
        }
    }

    &.fixed {
        img.logo {
            margin-top: 13px;
            .is-xs & {
                padding-left: 40px;
                margin-top: 5px;
            }
        }
    }
}


.header {

    &.start-page {
        text-align: center;

        .image-wrapper {
            position: relative;
        }
    }

    .is-xs & {
        margin-bottom: 40px;

        > img {
            display: block;
        }
    }

    p {
        font-family: $font-1 $font-family-1;
        font-weight: $font-semi;
        font-size: 1.33em;
        color: $black;
        line-height: 180%;
        text-transform: uppercase;

        .is-sm &, .is-xs & {
            font-size: 1.33em;
        }
    }

    h1 + p {
        margin-top: -50px;

        .is-xs & {
            margin-top: -40px;
        }
    }

    .button {
        display: block;
        position: absolute !important;
        top: 50%;
        margin: -46px 0 0 -175px;
        max-width: 330px !important;

        .is-xs & {
            position: absolute !important;
            margin: -46px 0 0 -150px;
            max-width: 300px !important;
        }
    }
}

#footer {

    a {
        text-decoration: none;
    }

    .footer-logo {
        .is-md & {
            height: 65px;
        }
        .is-sm & {
            height: 80px;
        }
    }
}

.content-startpage {
    padding: 0 150px;
    margin-bottom: 60px;

    .is-md & {
        padding: 0 100px;
    }

    .is-sm &, .is-xs & {
        padding: 0;
    }

    h2 {
        text-align: center;
    }

    p {
        font-size: 1em;
        line-height: 147%;

        .is-md &, .is-sm &, .is-xs & {
            font-size: 1em;
            line-height: 147%;
        }
    }
}

.partners {
    h2 {
        text-align: center;
        margin-bottom: 60px;

        .is-xs & {
            margin-bottom: 30px;
        }
    }

    .row {
        padding: 0;
        margin: 0;

        > div {
            padding: 0;
            margin: 0;

            img {
                width: 100%;
                padding: 0;
                margin: 0;
            }
        }
    }
}
/* ... */

